--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__inner">
-        <a href="/" class="header__logo logo"></a>
+      <div class="header__top">
+        <div class="header__logo__adress">
+          <div class="header__logo">
+            <div class="logo">
+              <div class="logo__icon">VM</div>
+              <div class="logo__text">
+                <div class="logo__text--primary">VIATEK MEDIA</div>
+                <div class="logo__text--secondary">Кейтеринговая компания</div>
+              </div>
+            </div>
+          </div>
+          <div class="header__adress">
+            <div class="adress">
+              г. Старый Оскол, мкр Юбилейный, д.35, корпус 3, офис 224
+            </div>
+          </div>
+        </div>
+
+        <div class="header__contacts">
+          <div class="contacts__phone">+7 (996) 886-85-36</div>
+          <button class="contacts__callback">Обратная связь</button>
+          <div class="contacts__socials">
+            <a href="#" class="social__link whatsapp"></a>
+            <a href="#" class="social__link telegram"></a>
+            <a href="#" class="social__link vk"></a>
+            <a href="#" class="social__link ok"></a>
+          </div>
+        </div>
+      </div>
+      <!-- <a href="/" class="header__logo logo"></a>
         <img src="" alt="" class="logo__image">
         <nav class="header__menu">
           <ul class="header__menu-list">
@@ -18,8 +46,20 @@
             </li>
           </ul>
         </nav>
-        <button class="header__button button button--transparent"></button>
-      </div>
+        <button class="header__button button button--transparent"></button> -->
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="/">О компании</a></li>
+          <li class="nav__item nav__item--dropdown">
+            <a href="">Услуги</a>
+          </li>
+          <li class="nav__item"><a href="">Акции и новости</a></li>
+          <li class="nav__item"><a href="">Прайс</a></li>
+          <li class="nav__item"><a href="">Портфолио</a></li>
+          <li class="nav__item"><a href="">Контакты</a></li>
+        </ul>
+        <button class="nav__burger"></button>
+      </nav>
     </header>
 
     <main class="main">
