--- a/index.html
+++ b/index.html
@@ -109,17 +109,25 @@
             <div class="line"></div>
             <div class="line"></div>
           </div>
-          <nav class="nav">
-            <div class="ul">
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-            </div>
-          </nav>
         </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="#">О компании</a></li>
+            <li class="dropdown">
+              <a class="dropdown-link" href="#">Услуги</a>
+              <ul class="submenu">
+                <li><a href="#">Новый год</a></li>
+                <li><a href="#">Банкет</a></li>
+                <li><a href="#">Фуршет</a></li>
+                <li><a href="#">Барбекю</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Прайс</a></li>
+            <li><a href="#">Меню</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
