anim fro nav+start slider

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="contacts">
             <div class="phone-select">
               <div class="phone-select-header">
-                <p>+7 910 360 63 92</p>
+                <p>+7 (4725) 22-00-54</p>
               </div>
               <div class="phone-select-wrapper">
                 <!-- make dropdown -->
@@ -110,27 +110,63 @@
             <div class="line"></div>
           </div>
         </div>
-        <nav class="nav">
-          <ul>
+        <nav class="nav"> <!-- TODO: @media-->
+          <ul class="nav-list">
             <li><a href="#">О компании</a></li>
             <li class="dropdown">
               <a class="dropdown-link" href="#">Услуги</a>
               <ul class="submenu">
                 <li><a href="#">Новый год</a></li>
-                <li><a href="#">Банкет</a></li>
-                <li><a href="#">Фуршет</a></li>
+                <li><a href="#">Банкет</a></li> 
+                <li><a href="#">Фуршет</a></li> 
                 <li><a href="#">Барбекю</a></li>
               </ul>
             </li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Прайс</a></li>
             <li><a href="#">Меню</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Контакты</a></li>          
           </ul>
+          <div class="burger-btn">
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
         </nav>
       </div>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="slider">
+        <div class="frame">
+          <div class="text">
+            <p>Выездное ресторанное обслуживание</p>
+            <p>для событий любого масштаба при любых условиях</p>
+          </div>
+          <button class="ripple">
+            <span>Узнать больше</span>
+        </button>
+        </div>
+        <div class="scroll-bar">
+          <p>1/3</p>
+          <button class="forward"></button>
+          <button class="backward"></button>
+        </div>
+      </div>
+      
+    </div>
+
+
+    </main>
   </body>
 </html>
+<!-- 
+rest-proj:
+
+- в nav бургер постоянно, на мобильной сворачивается в одно меню
+- кнопки соц сетей hover
+- обратная связь с анимацией
+- scroll-bar(?)
+
+-->
+
+
