--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="header">
+      <div class="gradient"></div>
       <div class="content">
         <div class="header-row">
           <div class="logo_adress">
@@ -145,12 +146,18 @@
           <button class="ripple">
             <span>Узнать больше</span>
         </button>
+        <div class="pagination">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
         </div>
-        <div class="scroll-bar">
+        </div>
+        <div class="spin-button">
           <p>1/3</p>
           <button class="forward"></button>
           <button class="backward"></button>
         </div>
+        
       </div>
       
     </div>
@@ -167,6 +174,10 @@ rest-proj:
 - обратная связь с анимацией
 - scroll-bar(?)
 
+моб версия:
+- переход на окна (часть бэка на картинке, часть на однотонном)
+- открытие при нажатии на бургер
+- анимация на Узнать больше
 -->
 
 
