hovers for social-link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="tel:+74725220056">+7 (4725) 22-00-56</a>
               </div>
             </div>
-            <button class="callback">ОБРАТНАЯ СВЯЗЬ</button>
+            <button class="callback"><span>ОБРАТНАЯ СВЯЗЬ</span></button>
             <div class="contacts-socials">
               <a href="#" class="social-link whatsapp">
                 <svg
